# spectro-rs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  README_zh.md  RELEASE.md  i18n.toml  log.txt  release.toml  spectro_theme.json
.agent/workflows/: develop_munki_driver.md  release.md
.github/workflows/: ci.yml  publish.yml
crates/spectro-core/: Cargo.toml  README.md
crates/spectro-core/i18n/en-US/: spectro_core.ftl
crates/spectro-core/i18n/zh-CN/: spectro_core.ftl
crates/spectro-core/src/: cam02.rs  colorimetry.rs  device.rs  icc.rs  lib.rs  main.rs  munki.rs  persistence.rs  spectrum.rs  sprague.rs  tm30.rs  tm30_data.rs  tm30_data_cmf.rs  transport.rs
crates/spectro-gui/: Cargo.toml  README.md  i18n.toml
crates/spectro-gui/i18n/en-US/: spectro_gui.ftl
crates/spectro-gui/i18n/zh-CN/: spectro_gui.ftl
crates/spectro-gui/src/: app.rs  calibration.rs  i18n.rs  main.rs  shared.rs  theme.rs  tm30_gui.rs
docs/wiki/: Home.md
i18n/en-US/: spectro_rs.ftl
i18n/zh-CN/: spectro_rs.ftl
src/: colorimetry.rs  i18n.rs  lib.rs  main.rs  munki.rs  spectrum.rs
