[package]
name = "spectro-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
hidapi = "2.6.4"
rusb = "0.9.4"
thiserror = "2.0.11"
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.8.0"
rust-embed = "8.3.0"
sys-locale = "0.3.1"
dialoguer = "0.11.0"
