[package]
name = "spectro-core"
version = "0.1.2"
edition = "2021"
authors = ["Tinnci <shisooe@gmail.com>"]
description = "Core library for X-Rite ColorMunki spectrometers."

[dependencies]
rusb = "0.9.4"
thiserror = "2.0.11"
rust-embed = "8.4.0"
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.8.0"
sys-locale = "0.3.1"
dialoguer = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"
crossbeam-channel = "0.5.13"
