[package]
name = "spectro-gui"
version = "0.3.3"
edition = "2021"
authors = ["Tinnci <shisoratsu@icloud.com>"]
description = "Graphical User Interface for the spectro-rs spectrometer driver suite"
license = "GPL-3.0"
repository = "https://github.com/Tinnci/spectro-rs"
readme = "README.md"
categories = ["hardware-support", "graphics", "science"]
keywords = ["spectrometer", "colormunki", "colorimetry", "egui"]

[dependencies]
spectro-rs = { version = "0.3", path = "../spectro-core" }
eframe = "0.29.0"
egui = "0.29.0"
egui_plot = "0.29.0"
crossbeam-channel = "0.5.13"
chrono = "0.4"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
